test/classes/initializers/initDone-1.good
initDone-1.chpl:5: In initializer:
initDone-1.chpl:12: error: cannot update a const field, "y", in phase 2
